Finished initial implementation of AdminPanel.  Need to work on invalid album metadata list/pagination, play next track event handling to update queue and to limit search results to 5, as 10 are showing now